# trainable-circuits

./: AGENTS.md  CODEX.md  README.md  nb03_results.txt  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  repo_structure.md
configs/: phase1.yaml
configs/ablations/: geometry_only.yaml  (+1 more)
data/: __init__.py  datasets.py
documents/: artifact_contracts.md  current_validity_review.md  decision_log.md  dev_workflows.md  experiment_guide.md  preliminary_results.md  project_context.md  repo_structure.md  research_results_so_far.md
evaluation/: __init__.py  circuit_analysis.py  circuit_viz.py  discovery.py  interventions.py  trajectory_viz.py
flow_circuits/: __init__.py
losses/: __init__.py  info_loss.py
models/: __init__.py  backbone.py
notebooks/: README.md  nb01_backbone_and_z_training.ipynb  nb01_training_and_representation_metrics.ipynb  nb01_training_and_validation.ipynb  nb02_analysis.ipynb  nb02_candidate_circuit_discovery_and_stability.ipynb  nb02_efficient_representation_and_circuit_validation.ipynb  nb02_q_validation.ipynb  nb03_causal_interventions.ipynb  nb03_interventions_and_qualitative_analysis.ipynb  nb03_recurring_motif_core_validation.ipynb  nb03_trajectory_animation.ipynb  nb03_z_motif_discovery_and_analysis.ipynb  nb04_motif_extended_characterization.ipynb  nb04_motif_utility_and_robustness.ipynb  nb05_motif_semantic_interpretation.ipynb  nb05_motif_visual_interpretability_and_probe_analysis.ipynb  nb06_hard_pair_correction_from_z.ipynb  nb07_phase_c_corruption_selective_correction.ipynb
scripts/: evaluate.py  train.py
tests/: conftest.py  test_backbone.py  test_branch_workflows.py  test_circuit_analysis.py  test_circuit_viz.py  test_cli.py  test_corruption_selective_correction.py  test_datasets.py  test_discovery.py  test_efficient_validation.py  test_hard_pair_correction.py  test_integration.py  test_interpretability_validation.py  test_interventions.py  test_losses.py  test_meta_encoder.py  test_metrics.py  test_motif_interpretation.py  test_motif_utility.py  test_motif_validation.py  test_objectives.py  test_observer_and_tokenizer.py  test_q_validation.py  test_repo_hygiene.py  test_training.py
training/: __init__.py  unified_trainer.py
(+48 files in other folders)
