[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-circuits"
version = "0.2.0"
description = "Flow-based candidate-circuit discovery in frozen ResNets"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "hdbscan>=0.8.33",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[project.scripts]
flow-train = "flow_circuits.cli.train:main"
flow-evaluate = "flow_circuits.cli.evaluate:main"
flow-discover = "flow_circuits.cli.discover:main"
flow-intervene = "flow_circuits.cli.intervene:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["flow_circuits*"]
exclude = ["tests*", "notebooks*", "documents*", "configs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
